# clawdmintagent

./: .env.example  .env.production  .gitignore  .gitmodules  DEPLOYMENT.md  NETLIFY_ENV_SETUP.md  NETLIFY_SETUP.md  README.md  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
agent-bot/: .env.example  README.md  package-lock.json  package.json
agentcash-test/: package-lock.json  package.json  probe.mjs
contracts/: README.md  foundry.toml
docs/: README.md  agent-marketplace.md  agents.md  api.md  clawpeg-launchpad.md  clawpeg-marketplace.md  clawpeg.md  collections.md  marketplace.md  partners.md  quickstart.md
preview/: COLLECTION-PLAN.md  randomizer-flat-backup.html  randomizer.html
prisma/: schema.prisma
public/: skill.json  skill.md
scripts/: add-api-key.js  admin-build-clawpeg.ps1  airdrop-to-holders.js  check-agent.js  cpeg-agent-root-smoke.js  cpeg-localnet-smoke.ts  cpeg-offline-verify.ts  cpeg-token-audit.ts  deploy-agents-collection.js  deploy-clawpeg.ps1  generate-collection.js  prepare-deploy.js  register-erc8257-tools.js  renderer-v3-smoke.ts  repair-marketplace-assets.ts  resync-metaplex-agents.js  run-cpeg-verify.js  seed-lila-agent.js  seed-simulation-agents.js  setup-env.ts  sign-claim.ts  team-mint.js  test-pinata.js  tsconfig.scripts.json  update-lila-collection.js  upgrade-afl9-clawpeg-devnet.ps1  upgrade-cpeg-market-devnet.ps1  upgrade-cpeg-stack-devnet.ps1  (+4 more)
solana/programs/clawpeg/: Cargo.toml  README.md
solana/programs/clawpeg/src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
(+355 files in other folders)
