[package]
name = "clawpeg"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.17"
spl-token-2022 = { version = "=3.0.4", features = ["no-entrypoint"] }
spl-tlv-account-resolution = "=0.6.5"
spl-transfer-hook-interface = "=0.6.5"

[features]
no-entrypoint = []
